// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelperFunctions nothing returns an empty template result 1`] = `"<!----><!--?-->"`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a date 1`] = `
"<!---->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$075664606$-->sunrise</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$075664606$-->1623029837812</span>
      </div>
    "
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a number 1`] = `
"<!---->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$075664606$-->sunrise</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$075664606$-->9</span>
      </div>
    "
`;

exports[`HelperFunctions renderFieldElement returns a field element template when the provided value is a string 1`] = `
"<!---->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$075664606$-->sunrise</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$075664606$-->test</span>
      </div>
    "
`;

exports[`HelperFunctions renderFieldElement returns an empty template when the provided value is undefined 1`] = `"<!----><!--?-->"`;
